force-app/main/default/objects/Titulo__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Títulos</relationshipLabel>
    <relationshipName>Titulos</relationshipName>
    <type>Lookup</type>
</CustomField>