force-app/main/default/objects/Titulo__c/fields/CodigoTitulo__c.field-meta.xml
<CustomField>
    <fullName>CodigoTitulo__c</fullName>
    <externalId>true</externalId>
    <label>Código do Título</label>
    <length>14</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>