force-app/main/default/objects/Titulo__c/fields/OrigemDocumento__c.field-meta.xml
<CustomField>
    <fullName>OrigemDocumento__c</fullName>
    <label>Origem do Documento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>