force-app/main/default/objects/Titulo__c/fields/PercentualComissao__c.field-meta.xml
<CustomField>
    <fullName>PercentualComissao__c</fullName>
    <label>Percentual Comissão</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>