force-app/main/default/objects/Titulo__c/fields/PortadorTitulo__c.field-meta.xml
<CustomField>
    <fullName>PortadorTitulo__c</fullName>
    <label>Portador do Título</label>
    <length>150</length>
    <type>Text</type>
</CustomField>