force-app/main/default/objects/Titulo__c/fields/RepresentanteId__c.field-meta.xml
<CustomField>
    <fullName>RepresentanteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representante</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Títulos</relationshipLabel>
    <relationshipName>Titulos</relationshipName>
    <type>Lookup</type>
</CustomField>