force-app/main/default/objects/Titulo__c/fields/ValorSaldo__c.field-meta.xml
<CustomField>
    <fullName>ValorSaldo__c</fullName>
    <label>Valor do Saldo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>